--- a/app_medicine/pubspec.yaml
+++ b/app_medicine/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   carousel_pro: ^1.0.0
   intl: ^0.17.0
-  
+  animated_bottom_navigation_bar: ^0.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
