--- a/app_medicine/pubspec.yaml
+++ b/app_medicine/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   carousel_pro: ^1.0.0
   intl: ^0.17.0
-  animated_bottom_navigation_bar: ^0.3.2
+  bottom_bar: ^1.3.0+1
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
