--- a/app_medicine/pubspec.yaml
+++ b/app_medicine/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   carousel_pro: ^1.0.0
   intl: ^0.17.0
   bottom_bar: ^1.3.0+1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
