--- a/app_medicine/pubspec.yaml
+++ b/app_medicine/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_pro: ^1.0.0
+  card_swiper: ^2.0.3
   intl: ^0.17.0
   bottom_bar: ^1.3.0+1
   flutter_localizations:
