--- a/app_medicine/pubspec.yaml
+++ b/app_medicine/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   card_swiper: ^2.0.3
   intl: ^0.17.0
   bottom_bar: ^1.3.0+1
+  sqflite:
+  path:
   flutter_localizations:
     sdk: flutter
 
